Check allowedTarget of Skill before picking a target