@@ -7,7 +7,9 @@ import java.util.List;
 import java.util.Optional;
 
 import static java.util.Comparator.comparingInt;
-import static java.util.stream.Collectors.toList;
+import static java.util.function.Predicate.not;
+import static nl.jdriven.mayhem.domain.Heroes.getSpecificAliveHero;
+import static nl.jdriven.mayhem.domain.Heroes.hasBuff;
 
 public final class Skills {
     public static boolean isPositive(Hero.Skill skill) {
@@ -43,26 +45,28 @@ public final class Skills {
     }
 
     public static Optional<Hero> applicableHero(Hero.Skill skill, Hero owner, List<Hero> heroes) {
-        return Hero.Skill.AllowedTarget.self == skill.getAllowedTarget()
-            ? Optional.of(owner)
-            : applicableHero(skill, heroes);
+        return switch (skill.getAllowedTarget()) {
+            case self: yield Optional.of(owner);
+            case others: yield applicableHero(skill, heroes.stream().filter(hero -> hero.getId() != owner.getId()).toList());
+            case all: yield applicableHero(skill, heroes);
+        };
     }
 
     protected static Optional<Hero> applicableHero(Hero.Skill skill, List<Hero> heroes) {
         return switch (skill.getType()) {
-            case health: yield Optional.ofNullable(Heroes.getSpecificAliveHero(heroes.stream().filter(hero -> Heroes.doesNotHaveBuff(hero, skill)).collect(toList()), skill));
-            case resistance: yield heroes.stream().filter(Hero::isAlive).filter(hero -> Heroes.doesNotHaveBuff(hero, skill)).min(comparingInt(Hero::getResistance));
-            case armor: yield heroes.stream().filter(Hero::isAlive).filter(hero -> Heroes.doesNotHaveBuff(hero, skill)).min(comparingInt(Hero::getArmor));
-            case power: yield heroes.stream().filter(Hero::isAlive).filter(hero -> Heroes.doesNotHaveBuff(hero, skill)).min(comparingInt(Hero::getPower));
+            case health: yield Optional.ofNullable(getSpecificAliveHero(heroes.stream().filter(not(hero -> hasBuff(hero, skill))).toList(), skill));
+            case resistance: yield heroes.stream().filter(Hero::isAlive).filter(not(hero -> hasBuff(hero, skill))).min(comparingInt(Hero::getResistance));
+            case armor: yield heroes.stream().filter(Hero::isAlive).filter(not(hero -> hasBuff(hero, skill))).min(comparingInt(Hero::getArmor));
+            case power: yield heroes.stream().filter(Hero::isAlive).filter(not(hero -> hasBuff(hero, skill))).min(comparingInt(Hero::getPower));
         };
     }
 
     public static Optional<Hero> applicableEnemy(Hero.Skill skill, List<Hero> enemies) {
         return switch (skill.getType()) {
-            case health: yield Optional.ofNullable(Heroes.getSpecificAliveHero(enemies.stream().filter(hero -> Heroes.doesNotHaveBuff(hero, skill)).collect(toList()), skill));
-            case resistance: yield enemies.stream().filter(e -> e.isAlive() && e.getResistance() > 0).filter(hero -> Heroes.doesNotHaveBuff(hero, skill)).max(comparingInt(Hero::getResistance));
-            case armor: yield enemies.stream().filter(e -> e.isAlive() && e.getArmor() > 0).filter(hero -> Heroes.doesNotHaveBuff(hero, skill)).max(comparingInt(Hero::getArmor));
-            case power: yield enemies.stream().filter(e -> e.isAlive() && e.getPower() > 0).filter(hero -> Heroes.doesNotHaveBuff(hero, skill)).max(comparingInt(Hero::getPower));
+            case health: yield Optional.ofNullable(getSpecificAliveHero(enemies.stream().filter(not(hero -> hasBuff(hero, skill))).toList(), skill));
+            case resistance: yield enemies.stream().filter(e -> e.isAlive() && e.getResistance() > 0).filter(not(hero -> hasBuff(hero, skill))).max(comparingInt(Hero::getResistance));
+            case armor: yield enemies.stream().filter(e -> e.isAlive() && e.getArmor() > 0).filter(not(hero -> hasBuff(hero, skill))).max(comparingInt(Hero::getArmor));
+            case power: yield enemies.stream().filter(e -> e.isAlive() && e.getPower() > 0).filter(not(hero -> hasBuff(hero, skill))).max(comparingInt(Hero::getPower));
         };
     }
 }
